--- a/roles/nzbget/tasks/main.yml
+++ b/roles/nzbget/tasks/main.yml
@@ -35,6 +35,7 @@
       - "/etc/localtime:/etc/localtime:ro"
       - "/opt/nzbget:/config"
       - "{{nzbget.downloads}}:/downloads/nzbget"
+      - "{{nzbget.intermediate| default (omit)}}:/downloads/tmp"
       - "/opt/scripts/nzb:/scripts"
     restart_policy: always
     networks:
@@ -68,6 +69,22 @@
     line: 'MainDir=/downloads/nzbget'
     state: present
   when: nzbget_conf.stat.exists == False
+
+- name: Set temporary intermediate directory
+  lineinfile:
+    path: "/opt/nzbget/nzbget.conf"
+    regexp: '^InterDir\s?='
+    line: 'InterDir=/downloads/tmp'
+    state: present
+  when: '{{nzbget.intermediate}} != ""'
+
+- name: Set no intermediate directory
+  lineinfile:
+    path: "/opt/nzbget/nzbget.conf"
+    regexp: '^InterDir\s?='
+    line: 'InterDir='
+    state: present
+  when: '{{nzbget.intermediate}} == ""'
 
 - name: Change scripts directory
   lineinfile:
