Changed the variable in the intermediate conditionals

--- a/roles/nzbget/tasks/main.yml
+++ b/roles/nzbget/tasks/main.yml
@@ -15,16 +15,16 @@
 
 - name: Create nzbget intermediate directory
   file: "path={{nzbget.intermediate}} state=directory mode=0775 owner={{user}} group={{user}}"
-  when: '{{nzbget.intermediate}} != ""'
+  when: nzbget.intermediate != ""
 
 - name: "Set {{nzbget.intermediate}} permissions"
   shell: "chmod -R 775 {{nzbget.intermediate}}"
-  when: '{{nzbget.intermediate}} != ""'
-  
+  when: nzbget.intermediate != ""
+
 - name: "Set {{nzbget.intermediate}} owner"
   shell: "chown -R {{user}}:{{user}} {{nzbget.intermediate}}"
-  when: '{{nzbget.intermediate}} != ""'
-  
+  when: nzbget.intermediate != ""
+
 - name: Check nzbget.conf exists
   stat:
     path: "/opt/nzbget/nzbget.conf"
@@ -88,7 +88,7 @@
     regexp: '^InterDir\s?='
     line: 'InterDir=/downloads/tmp'
     state: present
-  when: '{{nzbget.intermediate}} != ""'
+  when: nzbget.intermediate != ""
 
 - name: Set no intermediate directory
   lineinfile:
@@ -143,5 +143,3 @@
     name: nzbget
     state: started
   when: nzbget_conf.stat.exists == False
-
-
