--- a/roles/nzbget/tasks/main.yml
+++ b/roles/nzbget/tasks/main.yml
@@ -47,7 +47,7 @@
       - "/etc/localtime:/etc/localtime:ro"
       - "/opt/nzbget:/config"
       - "{{nzbget.downloads}}:/downloads/nzbget"
-      - "{{nzbget.intermediate| default (omit)}}:/downloads/tmp"
+      - "{{nzbget.intermediate}}:/downloads/tmp | default (omit)}}"
       - "/opt/scripts/nzb:/scripts"
     restart_policy: always
     networks:
