fixing when conditional

--- a/roles/nzbget/tasks/main.yml
+++ b/roles/nzbget/tasks/main.yml
@@ -96,7 +96,7 @@
     regexp: '^InterDir\s?='
     line: 'InterDir='
     state: present
-  when: '{{nzbget.intermediate}} == ""'
+  when: nzbget.intermediate == ""
 
 - name: Change scripts directory
   lineinfile:
